Updates to beach and various

--- a/beach.html
+++ b/beach.html
@@ -64,5 +64,19 @@
                         <img class="image5" src="Beach-Assets/image5.jpg" alt="A painting by Matisse from 1920 with beach and the surrounding cliffs" loading="lazy">
                     </div>
                 </section>
+                <section>
+                    <div>
+                        <h2 class="headings">Activities</h2>
+                    </div>
+                    <div class="paragraph-style">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                    </div>
+                </section>
             </div>
         </main>
+        <footer class="credits">
+            <div>
+                <h7>© design by Naty Constantin</h7>
+            </div>
+    </body>
+</html>
