--- a/cliffs.html
+++ b/cliffs.html
@@ -55,4 +55,6 @@
             <div>
                 <h7>© design by Naty Constantin</h7>
             </div>
-        </footer>  
+        </footer> 
+    </body>
+</html> 
