Finished garden page + moved repeating css into a global file

--- a/gardens.html
+++ b/gardens.html
@@ -27,36 +27,42 @@
                         </div>
                         <div class="paragraph-style">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
                         </div>
-                        <div>
-                            <img class="image1" src="Gardens-Assets/image1.jpg" alt="The gardens with interesting looking bushes and some peculiar face-like sculpted rocks" loading="lazy">
-                        </div>
+                    </div>
+                    <div>
+                        <img class="image1" src="Gardens-Assets/image1.jpg" alt="The gardens with interesting looking bushes and some peculiar face-like sculpted rocks" loading="lazy">
                     </div>
                 </section>
                 <section>
-                    <div class="paragraph-style">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                    <div>
+                        <p class="paragraph-style">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                    </div>
                 </section>
                 <section>
                     <div>
                         <img class="image2" src="Gardens-Assets/image2.jpg" alt="Trimmed bushes in a very interesting way, overlooking the sead" loading="lazy">
                     </div>
                 </section>
-                <section>
-                    <div>
-                        <h2 class="headings">Schedule</h2>
+                <section class="text-row">
+                    <div class="text-width">
+                        <div>
+                            <h2 class="headings">Schedule</h2>
+                        </div>
+                        <div class="paragraph-style">
+                            <p>Open in February, March, November and from 1 to 20 December, daily from 10 am to 6 pm.</p>
+                            <p>Open from 1 April to 31 October, daily from 10am to 7pm.</p>
+                        </div>
                     </div>
-                    <div class="paragraph-style">
-                        <p>Open in February, March, November and from 1 to 20 December, daily from 10 am to 6 pm.</p>
-                        <p>Open from 1 April to 31 October, daily from 10am to 7pm.</p>
-                    </div>
-                    <div>
-                        <h2 class="headings">Prices</h2>
-                    </div>
-                    <div class="paragraph-style">
-                        <p>Adults: €12</p>
-                        <p>Free for children up to 7 years old. </p>
+                    <div class="text-width">
+                        <div>
+                            <h2 class="headings">Prices</h2>
+                        </div>
+                        <div class="paragraph-style">
+                            <p>Adults: €12</p>
+                            <p>Children from 7 to 14 years old: 7,50 €.</p>
+                            <p>Free for children up to 7 years old. </p>
+                        </div>
                     </div>
                 </section>
                 <section>
