--- a/index.html
+++ b/index.html
@@ -71,24 +71,28 @@
                 </section>
                 <section class="cards">
                     <div class="expand">
-                        <a style="text-decoration: none;" href="cliffs.html">
+                        <a id="notextdeco" href="cliffs.html">
                             <h3 class="textoverimage1">The Cliffs</h3>
                             <img class="image7" src="Index-Assets/image7.jpg" alt="A flowery field from which the cliffs are observed" loading="lazy">
                         </a>  
                     </div>
                     <div class="expand">
-                        <a style="text-decoration: none;" href="beach.html">
+                        <a id="notextdeco" href="beach.html">
                             <h3 class="textoverimage2">The Beach</h3>
                             <img class="image8" src="Index-Assets/image8.jpg" alt="The beaches overlooking the sea" loading="lazy">
                         </a>
                     </div>
                     <div class="expand">
-                        <h3 class="textoverimage3">Old Town</h3>
-                        <img class="image9" src="Index-Assets/image9.jpg" alt="Buildings from old town" loading="lazy">  
+                        <a id="notextdeco" href="oldtown.html">
+                            <h3 class="textoverimage3">Old Town</h3>
+                            <img class="image9" src="Index-Assets/image9.jpg" alt="Buildings from old town" loading="lazy">  
+                        </a>
                     </div>
                     <div class="expand">
-                        <h3 class="textoverimage4">The Gardens</h3>
-                        <img class="image10" src="Index-Assets/image10.jpg" alt="The beautiful gardens of the area with some interesting sculptures that look like faces" loading="lazy">
+                        <a id="notextdeco" href="gardens.html">
+                            <h3 class="textoverimage4">The Gardens</h3>
+                            <img class="image10" src="Index-Assets/image10.jpg" alt="The beautiful gardens of the area with some interesting sculptures that look like faces" loading="lazy">
+                        </a>
                     </div>
                 </section>
             </div>
