--- a/gardens.html
+++ b/gardens.html
@@ -61,7 +61,7 @@
                         <div class="paragraph-style">
                             <p>Adults: €12</p>
                             <p>Children from 7 to 14 years old: 7,50 €.</p>
-                            <p>Free for children up to 7 years old. </p>
+                            <p id="no-margin">Free for children up to 7 years old.</p>
                         </div>
                     </div>
                 </section>
