--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;900&family=Jua&family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles-index.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="Styles/styles-index.css">
+        <script src="Scripts/script.js"></script>
     </head>
     <body>
         <header class="header-item">
