--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Explore Étretat - Normandy Tourism Main Page</title>
+        <title>Explore Étretat</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +13,10 @@
         <script src="Scripts/script.js"></script>
     </head>
     <body>
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M17.5 40V9.5625L3.5 23.5625L0 20L20 0L40 20L36.5 23.5625L22.5 9.5625V40H17.5Z" fill="white" fill-opacity="0.4"/>
+            </svg> </button>
+        <script src="Scripts/backtotop.js"></script>
         <header class="header-item">
         <div>
             <a id="notextdeco" href="index.html">
