--- a/oldtown.html
+++ b/oldtown.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
             </div>
-            <h1 class="header-text">The Gardens of Étretat</h1>
+            <h1 class="header-text">The Old Town</h1>
         </header>
         <main>
             <div class="container">
