--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <script src="Scripts/script.js"></script>
     </head>
     <body>
-        <button onclick="topFunction()" id="myBtn" title="Go to top"><svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <button onclick="topFunction()" id="topButton" title="Return to top"><svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M17.5 40V9.5625L3.5 23.5625L0 20L20 0L40 20L36.5 23.5625L22.5 9.5625V40H17.5Z" fill="white" fill-opacity="0.4"/>
-            </svg> </button>
+            </svg></button>
         <script src="Scripts/backtotop.js"></script>
         <header class="header-item">
         <div>
