--- a/cliffs.html
+++ b/cliffs.html
@@ -45,7 +45,7 @@
                             <h2 class="headings">Porte D'aval</h2>
                         </div>
                         <div class="paragraph-style">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud .</p>
+                            <p>The Porte d'Aval (on the left when looking at the sea), a huge flint archway, was carved by the waves beating the end of the Falaise d'Aval. The 51-metre-high needle bears witness to the geological past of the cliffs of Étretat. It has become famous, gained a universal reputation and inspired many painters and writers.</p>
                         </div>
                     </div>
                     <div>
@@ -62,7 +62,7 @@
                         <h2 class="headings">Falaise D'amont</h2>
                     </div>
                     <div class="paragraph-style">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                        <p>The Falaise d'Amont is the cliff on the other side of the beach, to the right when looking out to sea, and less than a century ago it was called Falaise du Blanc-Trait (White Line Cliff), because of the whiteness of the chalk, visible from the open sea a great distance away. How can we not pay tribute to Maupassant's keen sense of observation, who in “Une vie” compares the Arche d'Amont (arch) to an elephant dipping its trunk in the sea? It's all there: the trunk, the head and ears, the front and back limbs and even a Maharajah's palanquin on its back!</p>
                     </div>
                     <div>
                         <img class="image3" src="Cliffs-Assets/image3.jpg" alt="Another part of the cliff with a very cloudy sky" loading="lazy">
