--- a/gardens.html
+++ b/gardens.html
@@ -44,8 +44,8 @@
                             <h2 class="headings">About</h2>
                         </div>
                         <div class="paragraph-style">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
+                            <p>In 1905, Madame Thébault, then a famous actress, planted a first tree on one of the cliffs of Étretat. This is the first step that will lead more than a century later to the creation of the Jardins d'Étretat.</p>
+                            <p>The internationally renowned landscape architect, Alexandre Grivko, was inspired by the flora of the Normandy coast to draw a complex and fascinating course of plant sculptures. A collection of contemporary art, which fits perfectly in the architecture of the garden, paces the visitor's journey and allows to harmoniously interweave the work of the hand of man and that of nature.</p>
                         </div>
                     </div>
                     <div>
@@ -54,7 +54,7 @@
                 </section>
                 <section>
                     <div>
-                        <p class="paragraph-style">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                        <p class="paragraph-style">The Jardins d'Étretat take place in different spaces, each with a charm of its own, but united by one and the same inspiration. This is why, whatever the angle of view, it is the impression of the strong unity of an overall pattern that dominates. The gardens finally offer the visitor an exceptional opening on the landscape which surrounds them, revealing to him an impregnable perspective on the sea, the beach and the cliffs.</p>
                     </div>
                 </section>
                 <section>
