--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <script src="Scripts/script.js"></script>
     </head>
     <body>
-        <button onclick="topFunction()" id="topButton" title="Return to top"><svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M17.5 40V9.5625L3.5 23.5625L0 20L20 0L40 20L36.5 23.5625L22.5 9.5625V40H17.5Z" fill="white" fill-opacity="0.4"/>
-            </svg></button>
+        <button onclick="topFunction()" id="topButton" title="Return to top">
+            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M17.5 40V9.5625L3.5 23.5625L0 20L20 0L40 20L36.5 23.5625L22.5 9.5625V40H17.5Z" fill="white" fill-opacity="0.4"/>
+            </svg>
+        </button>
         <script src="Scripts/backtotop.js"></script>
         <header class="header-item">
         <div>
@@ -47,8 +49,8 @@
                             <h2 class="headings">About Étretat</h2>
                         </div>
                         <div class="paragraph-style">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                            <p>Etretat, a small stranding port already well known in Roman times, has long lived to the rhythm of its fishing activities. Traces of this era are still visible on the waterfront: you can see the capstans used to pull the boats up onto the pebbles or the “caloges”, old boats covered with thatch.</p>
+                            <p> While its cliffs are among the most impressive natural sites in Europe, the artistic and historical heritage of this small maritime town will surprise you.</p>
                         </div>
                     </div>
                     <div>
@@ -65,8 +67,8 @@
                         <h2 class="headings">History</h2>
                     </div>
                     <div class="paragraph-style">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </p>
+                        <p>An old legend says that the village was founded following a Viking invasion. Étretat's fame was settled in the 19th century when, from a fishing village, it quickly became a fashionable seaside resort.</p>
+                        <p>Little by little, the traditional activity of fishing was substituted by tourism. Paris and the largest cities in Normandy were not far and the construction of a railway line made transportation easier towards this little town.</p>
                     </div>
                 </section>
                 <section class="cards">
@@ -80,7 +82,8 @@
                             <h2 class="headings">How to get there</h2>
                         </div>
                         <div class="paragraph-style">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                            <p>Etretat is located in Northen France 20 km north of Le Havre, in Normandy. It is possible to visit Etretat on a day trip Paris to Etretat (198 km) or - even better - as part of a Normandy road trip.</p>
+                            <p> Paris to Etretat: It's a 200km drive (2 hours) by car. You can travel from Paris to Le Havre by train (2 hrs, direct) and at Le Havre train station, take bus #13 to Etretat (35 min, hourly).</p>
                         </div>
                     </div>
                     <div>
