--- a/oldtown.html
+++ b/oldtown.html
@@ -45,7 +45,7 @@
                             <h2 class="headings">Architecture</h2>
                         </div>
                         <div class="paragraph-style">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                            <p>Étretat is one of the most beautiful towns in Normandy It is a lovely place for a stroll, and has a beautiful architecture of half-timbered houses built in Anglo-Norman style. Some of them have beautiful wooden decorations on beams, pillars, and roofs. The recently restored market hall is also worth the visit.</p>
                         </div>
                     </div>
                     <div class="half">
@@ -58,7 +58,7 @@
                             <h2 class="headings">Chapel of Notre-Dame-De-Garde</h2>
                         </div>
                         <div class="paragraph-style">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p>The chapel of Notre Dame de la Garde is an Étretat must-see. The Chapel is a relatively new construction dating from 1950, which replaces a previous chapel of fishermen and sailors destroyed by the Nazis in 1942. Built in a Neo-Gothic architectural style, the Chapel's main characteristic is its hull-shaped nave, recalling an environment familiar to sailors and fishermen.</p>
                         </div>
                         <div>
                             <img class="image2" src="OltTown-Assets/image2.jpg" alt="The old chapel of Notre-Dame-De-La-Garde" loading="lazy">
@@ -71,7 +71,7 @@
                             <h2 class="headings text-secondary-row">Le Clos Arsène Lupin Maison Maurice Leblan</h2>
                         </div>
                         <div class="paragraph-style">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                            <p>A traditional two-story house that belonged to the French writer Maurice Leblanc, Arsène Lupin‘s creator. Maurice Leblanc was originally from Rouen, but in 1918 he moved to this house in Étretat, where he wrote 19 novels and shorter stories about Arsène Lupin. Learn about the greatest of the thieves and help him solve the riddle of the Hollow Needle through a scenographic tour under a decoration from the beginning of the century.</p>
                         </div>
                         <div>
                             <img class="image3" src="OltTown-Assets/image3.jpg" alt="An old mansion from the town" loading="lazy">
