--- a/beach.html
+++ b/beach.html
@@ -46,8 +46,9 @@
                                 <h2 class="headings">About</h2>
                             </div>
                             <div class="paragraph-style">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
+                                <p>For several centuries, Étretat beach was all about fishing activities. From 1840, the fisherfolk of Étretat saw the arrival of more and more visitors, industrialists, bankers, rich merchants from Paris or England.</p>
+                                <p>The action of the waves contributes to cliff falls, dissolves the chalk and polishes the flint, which turns into pebbles in just a few months.</p>
+                                <p>Pebbles are an essential natural protection against swell and storms. They slow down the waves that hit the promenade, the Étretat seawall and limit the risks of marine submersion of the town (a phenomenon it experienced in 1990 and 2016). It is therefore forbidden, under penalty of a fine, to collect them, although you can of course always skim them with the children!</p>
                             </div>
                         </div>
                         <div>
@@ -64,8 +65,8 @@
                                 <h2 class="headings">Through the eyes of different artists</h2>
                             </div>
                             <div class="paragraph-style">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
+                                <p>Enclosed between the Amont and Aval cliffs, Étretat beach is surrounded by a group of exceptional monumental cliffs, depicted by Monet, Courbet, Matisse and many other painters.</p>
+                                <p>Every year, artistic and cultural events punctuate beach life, such as the Hello Birds festival and the arts day in July, which brings together amateur and professional painters.</p>
                             </div>
                         </div>
                 </section>
@@ -88,7 +89,8 @@
                         <h2 class="headings">Activities</h2>
                     </div>
                     <div class="paragraph-style">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                        <p>Enjoying the sun on the beach while admiring the cliffs or tasting a seafood platter in one of the restaurants of the Perrey (Étretat's promenade seawall) are unique experiences!</p>
+                        <p>Swimming is of course a very popular activity, but don't forget to follow the instructions at the first-aid post. The Voiles et Galets sailing club offers lots of activities from Easter to November: paddle and kayak hire, sailing courses, sailing trips.You can also take part in or attend regattas such as the famous “Régate des périssoires” which brings together these traditional Étretat boats every year. You can also walk or fish in the rockpools at the foot of the cliffs.</p>
                     </div>
                 </section>
             </div>
