Update spacing and some texts

--- a/beach.html
+++ b/beach.html
@@ -66,7 +66,7 @@
                             </div>
                             <div class="paragraph-style">
                                 <p>Enclosed between the Amont and Aval cliffs, Étretat beach is surrounded by a group of exceptional monumental cliffs, depicted by Monet, Courbet, Matisse and many other painters.</p>
-                                <p>Every year, artistic and cultural events punctuate beach life, such as the Hello Birds festival and the arts day in July, which brings together amateur and professional painters.</p>
+                                <p id="no-margin">Every year, artistic and cultural events punctuate beach life, such as the Hello Birds festival and the arts day in July, which brings together amateur and professional painters.</p>
                             </div>
                         </div>
                 </section>
