--- a/gardens.html
+++ b/gardens.html
@@ -44,7 +44,7 @@
                             <h2 class="headings">About</h2>
                         </div>
                         <div class="paragraph-style">
-                            <p>In 1905, Madame Thébault, then a famous actress, planted a first tree on one of the cliffs of Étretat. This is the first step that will lead more than a century later to the creation of the Jardins d'Étretat.</p>
+                            <p class="text-spacing">In 1905, Madame Thébault, then a famous actress, planted a first tree on one of the cliffs of Étretat. This is the first step that will lead more than a century later to the creation of the Jardins d'Étretat.</p>
                             <p>The internationally renowned landscape architect, Alexandre Grivko, was inspired by the flora of the Normandy coast to draw a complex and fascinating course of plant sculptures. A collection of contemporary art, which fits perfectly in the architecture of the garden, paces the visitor's journey and allows to harmoniously interweave the work of the hand of man and that of nature.</p>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="paragraph-style">
                             <p>Open in February, March, November and from 1 to 20 December, daily from 10 am to 6 pm.</p>
-                            <p id="no-margin">Open from 1 April to 31 October, daily from 10am to 7pm.</p>
+                            <p>Open from 1 April to 31 October, daily from 10am to 7pm.</p>
                         </div>
                     </div>
                     <div class="text-width">
@@ -77,9 +77,9 @@
                             <h2 class="headings">Prices</h2>
                         </div>
                         <div class="paragraph-style">
-                            <p>Adults: €12</p>
-                            <p>Children from 7 to 14 years old: 7,50 €.</p>
-                            <p id="yes-margin">Free for children up to 7 years old.</p>
+                            <p>Adults: 12€</p>
+                            <p>Children from 7 to 14 years old: 7,50€.</p>
+                            <p id="no-margin">Free for children up to 7 years old.</p>
                         </div>
                     </div>
                 </section>
