--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="paragraph-style">
                             <p>Etretat, a small stranding port already well known in Roman times, has long lived to the rhythm of its fishing activities. Traces of this era are still visible on the waterfront: you can see the capstans used to pull the boats up onto the pebbles or the “caloges”, old boats covered with thatch.</p>
-                            <p> While its cliffs are among the most impressive natural sites in Europe, the artistic and historical heritage of this small maritime town will surprise you.</p>
+                            <p>While its cliffs are among the most impressive natural sites in Europe, the artistic and historical heritage of this small maritime town will surprise you.</p>
                         </div>
                     </div>
                     <div>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="paragraph-style">
                         <p>An old legend says that the village was founded following a Viking invasion. Étretat's fame was settled in the 19th century when, from a fishing village, it quickly became a fashionable seaside resort.</p>
-                        <p>Little by little, the traditional activity of fishing was substituted by tourism. Paris and the largest cities in Normandy were not far and the construction of a railway line made transportation easier towards this little town.</p>
+                        <p id="no-margin">Little by little, the traditional activity of fishing was substituted by tourism. Paris and the largest cities in Normandy were not far and the construction of a railway line made transportation easier towards this little town.</p>
                     </div>
                 </section>
                 <section class="cards">
