--- a/gardens.html
+++ b/gardens.html
@@ -10,13 +10,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;900&family=Jua&family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="Styles/styles-gardens.css">
-        <script src="Scripts/script.js"></script>
     </head>
     <body>
-        <button onclick="topFunction()" id="topButton" title="Return to top"><svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <button id="topButton" title="Return to top"><svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M17.5 40V9.5625L3.5 23.5625L0 20L20 0L40 20L36.5 23.5625L22.5 9.5625V40H17.5Z" fill="white" fill-opacity="0.4"/>
             </svg></button>
-        <script src="Scripts/backtotop.js"></script>
         <header class="header-item">
             <a id="notextdeco" href="index.html">
                 <svg class="logo-header" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -95,5 +93,7 @@
                 <h7>© design by Naty Constantin</h7>
             </div>
         </footer> 
+        <script src="Scripts/script.js"></script>
+        <script src="Scripts/backtotop.js"></script>
     </body>
 </html>
