--- a/beach.html
+++ b/beach.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <section>
                     <div class="rows">
-                        <div>
+                        <div class="text">
                             <div>
                                 <h2 class="headings">About</h2>
                             </div>
@@ -49,9 +49,7 @@
                                 <p>Pebbles are an essential natural protection against swell and storms. They slow down the waves that hit the promenade, the Étretat seawall and limit the risks of marine submersion of the town (a phenomenon it experienced in 1990 and 2016). It is therefore forbidden, under penalty of a fine, to collect them, although you can of course always skim them with the children!</p>
                             </div>
                         </div>
-                        <div>
-                            <img class="image1" src="Beach-Assets/image1.jpg" alt="The wild beaches as seen from a grassy cliff" loading="lazy">
-                        </div>
+                        <img class="image1" src="Beach-Assets/image1.jpg" alt="The wild beaches as seen from a grassy cliff" loading="lazy">
                     </div>
                     <div>
                         <img class="image2" src="Beach-Assets/image2.jpg" alt="The beaches where people tend to sunbathe" loading="lazy">
